Refactor threads overriding run() method