@@ -286,9 +286,7 @@ public class MultiThreadedOCPTest extends AbstractFullDistribZkTestBase {
   public void testLongAndShortRunningParallelApiCalls()
       throws InterruptedException, IOException, SolrServerException {
     Thread indexThread =
-        new Thread() {
-          @Override
-          public void run() {
+        Thread.ofVirtual().unstarted(() -> {
             Random random = random();
             int max = atLeast(random, 200);
             for (int id = 101; id < max; id++) {
@@ -298,8 +296,7 @@ public class MultiThreadedOCPTest extends AbstractFullDistribZkTestBase {
                 log.error("Exception while adding docs", e);
               }
             }
-          }
-        };
+        });
     indexThread.start();
     try (SolrClient client = createNewSolrClient("", getBaseUrl(jettys.get(0)))) {
 
